--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
+my_imdb_model/** filter=lfs diff=lfs merge=lfs -text
